# ghost

./: .gitignore  Cargo.toml  Integration.md  README.md  build.rs  plan.md  prepare_code.py  pyproject.toml  transcribe_thai.py  transcribe_thai_mac.py  transcribe_thai_mac_v2.py  translate_session.py
src/: app_state.rs  database.rs  handler.rs  lib.rs  main.rs  model.rs  parse.rs  repository.rs  service.rs
templates/: batch_translate.html  recorder.html  sessions.html  transcripts.html
